Finished -- updated README